[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/turret/Turret.gd" type="Script" id=1]
[ext_resource path="res://resources/stats/turret/turret_base_stats.tres" type="Resource" id=2]
[ext_resource path="res://gui/debug/EnemyStatsDebug.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/turret/turretBase_big.png" type="Texture" id=4]
[ext_resource path="res://assets/turret/turretBase_small.png" type="Texture" id=5]
[ext_resource path="res://assets/turret/gun06.png" type="Texture" id=6]
[ext_resource path="res://enemies/turret/Stats.gd" type="Script" id=7]
[ext_resource path="res://enemies/turret/states/Idle.gd" type="Script" id=8]
[ext_resource path="res://enemies/turret/states/ShootBullet.gd" type="Script" id=9]
[ext_resource path="res://enemies/turret/states/ShootMissile.gd" type="Script" id=10]
[ext_resource path="res://gui/enemy/EnemyGui.tscn" type="PackedScene" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 86.5835

[node name="Turret" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )
base_stats = ExtResource( 2 )

[node name="EnemyStatsDebug" parent="." instance=ExtResource( 3 )]
margin_left = -81.8492
margin_top = 118.681
margin_right = -41.8492
margin_bottom = 158.681

[node name="SpriteBase" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]
editor/display_folded = true

[node name="SpritePivot" type="Sprite" parent="Pivot"]
rotation = 1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="SpriteMuzzle" type="Sprite" parent="Pivot"]
rotation = -1.5708
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
offset = Vector2( 0, 10 )

[node name="Muzzle" type="Position2D" parent="Pivot"]
position = Vector2( 111.587, 0 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 7 )

[node name="States" type="Node" parent="."]
editor/display_folded = true

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="States/Idle"]
wait_time = 3.0
one_shot = true

[node name="ShootBullet" type="Node" parent="States"]
script = ExtResource( 9 )
bullet_scale = 2.0

[node name="Timer" type="Timer" parent="States/ShootBullet"]
wait_time = 5.0
one_shot = true

[node name="Cooldown" type="Timer" parent="States/ShootBullet"]

[node name="Shoot" type="Timer" parent="States/ShootBullet"]
wait_time = 0.07

[node name="ShootMissile" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="States/ShootMissile"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EnemyGui" parent="." instance=ExtResource( 11 )]
margin_left = -58.0
margin_top = -122.157
margin_right = 133.0
margin_bottom = -73.1572
rect_scale = Vector2( 0.6, 0.6 )
[connection signal="area_entered" from="." to="." method="_on_Turret_area_entered"]
[connection signal="timeout" from="States/Idle/Timer" to="States/Idle" method="_on_Timer_timeout"]
[connection signal="timeout" from="States/ShootBullet/Timer" to="States/ShootBullet" method="_on_Timer_timeout"]
[connection signal="timeout" from="States/ShootBullet/Cooldown" to="States/ShootBullet" method="_on_Cooldown_timeout"]
[connection signal="timeout" from="States/ShootBullet/Shoot" to="States/ShootBullet" method="_on_Shoot_timeout"]
[connection signal="timeout" from="States/ShootMissile/Timer" to="States/ShootMissile" method="_on_Timer_timeout"]
